<resources>
    <string name="app_name">ShowTimeForKotlin</string>

    <string name="add_tag">Add Tag</string>
    <string name="category_book_count">%1$d本</string>
    <string name="book_detail_user_lv">&#160;lv.%1$d</string>

    <string name="book_read_reading">朗读</string>
    <string name="book_read_community">社区</string>
    <string name="book_read_change_source">换源</string>
    <string name="book_read_introduce">简介</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="book_read_mode_day_manual_setting">日间</string>
    <string name="book_read_mode_night_manual_setting">夜间</string>
    <string name="book_read_feedback">反馈</string>
    <string name="book_read_settings">设置</string>
    <string name="book_read_download">缓存</string>
    <string name="book_read_mark">书签</string>
    <string name="book_read_toc">目录</string>
    <string name="add_bookmark">新增书签</string>
    <string name="manage_bookmark">管理</string>
    <string name="clear_bookmark">清除</string>
    <string name="book_read_download_error">网络异常，已取消下载</string>
    <string name="book_read_download_complete">缓存完成，失败%1$d章</string>
    <string name="book_read_alreday_download">已缓存过:%1$s(%2$d/%3$d)...</string>
    <string name="book_read_download_progress">正在缓存:%1$s(%2$d/%3$d)...</string>
    <string name="category_book_msg">%1$d人在追 |&#160; %2$s%%读者留存</string>
    <string name="book_detail_remove_collection">不追了</string>
    <string name="book_detail_join_collection">追更新</string>
    <string name="book_detail_hot_reviews">热门书评</string>
    <string name="book_detail_community">%1$s的社区</string>
    <string name="book_detail_post_count">共有%1$d个帖子</string>
    <string name="book_detail_recommend_book_list">推荐书单</string>
    <string name="book_detail_recommend_book_list_book_count">共%1$d本书 |&#160;</string>
    <string name="book_detail_recommend_book_list_collector_count">%1$d人收藏</string>
    <string name="book_detail_author">%1$s</string>
    <string name="book_detail_category"> &#160;|&#160;%1$s |&#160;</string>
    <string name="book_detail_retention_ratio">%1$s%%</string>
    <string name="book_detail_has_joined_the_book_shelf">《%1$s》成功加入书架</string>
    <string name="book_detail_has_remove_the_book_shelf">已移除《%1$s》</string>
    <string name="comment_best_comment">仰望神评论</string>
    <string name="comment_comment_count">共%1$d条评论</string>
    <string name="comment_floor">%1$d楼&#160;</string>
    <string name="comment_like_count">❤%1$d次同感</string>
    <string name="comment_reply_floor">(%1$d楼)</string>
    <string name="comment_reply_nickname">回复 %1$s</string>
    <string name="subject_book_list_detail_book_lately_follower">%1$d&#160;人在追</string>
    <string name="subject_book_list_detail_book_word_count">|&#160;%1$d&#160;万字</string>
    <string name="book_review_detail_helpful_yes">有用</string>
    <string name="book_review_detail_helpful_no">无用</string>
    <string name="book_review_detail_to_review_the_scoring">给书评打分</string>
    <string name="book_review_detail_score">楼主打分：</string>
    <string name="menu_book_scan_local_book">扫描本地书籍</string>
    <string name="menu_book_set_page">翻页模式</string>
    <string name="menu_book_search">搜索</string>
    <string name="search">搜索</string>
    <string name="search_hot_search">大家都在搜</string>
    <string name="search_change_a_lot">换一批</string>
    <string name="book_detail_is_joined_the_book_shelf">是否将《%1$s》加入书架</string>

    <string name="book_read_add_book">添书</string>
    <string name="book_read_would_you_like_to_add_this_to_the_book_shelf">是否将本书加入书架？</string>
    <string name="book_read_join_the_book_shelf">加入书架</string>
    <string name="book_read_not">不了</string>

    <!--直播-->
    <string name="live_all">直播</string>
    <string name="live_lol">英雄联盟</string>
    <string name="live_ow">守望先锋</string>
    <string name="live_dota2">DOTA2</string>
    <string name="live_hs">炉石传说</string>
    <string name="live_csgo">CSGO</string>
    <string name="live_platform">平台</string>

    <string name="game_type_all">live</string>
    <string name="game_type_lol">lol</string>
    <string name="game_type_ow">ow</string>
    <string name="game_type_dota2">dota2</string>
    <string name="game_type_hs">hs</string>
    <string name="game_type_csgo">csgo</string>
    <string name="live_roomname">直播间名称</string>
    <string name="live_nickname">主播昵称：</string>
    <string name="live_live_platform">直播平台：</string>
    <string name="live_game_type">游戏分类：</string>
</resources>
