<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlBookReadRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/theme_leather_bg"
    >
    <!-- 遮挡状态栏透明的部分 -->
    <TextView
        android:id="@+id/status_hight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reader_menu_bg_color"
        android:visibility="gone"
       tools:visibility="visible"/>
    <LinearLayout
        android:layout_below="@id/status_hight"
        android:id="@+id/llBookReadTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/tvDownloadProgress"
        android:layout_toRightOf="@+id/tvDownloadProgress"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:src="@mipmap/ab_back" />

        <TextView
            android:id="@+id/tvBookReadTocTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/whiteColor"
            android:textSize="20sp"
            android:visibility="gone"
            tools:text="武侠世界自由行" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <TextView
            android:id="@+id/tvBookReadReading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_reading"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/book_read_top_text" />

        <TextView
            android:id="@+id/tvBookReadCommunity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_community"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/book_read_top_text" />

        <TextView
            android:id="@+id/tvBookReadIntroduce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_introduce"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/book_read_top_text" />

        <TextView
            android:id="@+id/tvBookReadSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/book_read_change_source"
            android:textColor="@color/book_read_top_text"
            android:textSize="@dimen/book_read_top_text" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/flReadWidget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false"
        android:layerType="hardware"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvDownloadProgress"
        android:layout_toEndOf="@+id/tvDownloadProgress">
    </FrameLayout>

    <TextView
        android:id="@+id/tvDownloadProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBookReadBottom"
        android:background="#89232323"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:text="@string/book_read_download_progress"
        android:textColor="@color/whiteColor"
        android:visibility="gone" />

    <include layout="@layout/layout_read_aa_set" />

    <include layout="@layout/layout_read_mark" />

    <LinearLayout
        android:id="@+id/llBookReadBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/reader_menu_bg_color"
        android:clickable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvBookReadMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_menu_mode_night_manual"
            android:gravity="center"
            android:text="@string/book_read_mode_day"
            android:textColor="@color/common_touch_bg"
            android:textSize="@dimen/book_read_bottom_text" />

        <TextView
            android:id="@+id/tvBookReadSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_menu_settings_normal"
            android:gravity="center"
            android:text="@string/book_read_settings"
            android:textColor="@color/common_touch_bg"
            android:textSize="@dimen/book_read_bottom_text" />

        <TextView
            android:id="@+id/tvBookReadDownload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_reader_ab_download"
            android:gravity="center"
            android:text="@string/book_read_download"
            android:textColor="@color/common_touch_bg"
            android:textSize="@dimen/book_read_bottom_text" />

        <TextView
            android:id="@+id/tvBookMark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_menu_bookmark"
            android:gravity="center"
            android:text="@string/book_read_mark"
            android:textColor="@color/common_touch_bg"
            android:textSize="@dimen/book_read_bottom_text" />

        <TextView
            android:id="@+id/tvBookReadToc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/ic_menu_toc_normal"
            android:gravity="center"
            android:text="@string/book_read_toc"
            android:textColor="@color/common_touch_bg"
            android:textSize="@dimen/book_read_bottom_text" />

    </LinearLayout>

</RelativeLayout>
